--- a/frontend/app/templates/index.html
+++ b/frontend/app/templates/index.html
@@ -3,9 +3,28 @@
 {% block title %} Homepage of Frontend {% endblock %}
 
 {% block content %}
-    <div class="container mt-5">
-        <h1>Hello, world!</h1>
-        <p>Date from Backend: {{ date_from_backend }}</p>
+    <div class="container mt-5 p-2">
+        <div class="text-center pb-10 m-auto" style="max-width: 600px; padding-top: 24px; padding-bottom: 24px;">
+            <h1 class="fw-bold">VinoView</h1>
+            <p class="fs-6 pt-2">A simple application built with Python to display statistics and information on various types of wines from all over the world.</p>
+        </div>
+        
+
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" style="margin-top: 24px;">
+            {% for wine in top_wines  %}
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ wine.get("Name") }}</h5>
+                            <p class="card-text">{{ wine.get("Region") }}, {{  wine.get("Country") }}</p>
+                            <p class="card-text">Year: {{wine.get("Year")}}</p>
+                            <p class="card-text">{{ wine.get("Rating") }} / 5 ({{ wine.get("NumberOfRatings") }})</p>
+                            <p class="card-text fw-bold fs-4">{{ wine.get("Price") }} $</p>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 
 {% endblock %}
