--- a/frontend/app/templates/index.html
+++ b/frontend/app/templates/index.html
@@ -8,24 +8,50 @@
             <h1 class="fw-bold">VinoView</h1>
             <p class="fs-6 pt-2">A simple application built with Python to display statistics and information on various types of wines from all over the world.</p>
         </div>
-        
 
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" style="margin-top: 24px;">
-            {% for wine in top_wines  %}
-                <div class="col">
-                    <div class="card">
+        <div class="row" style="margin-top: 24px;">
+            <div class="col-md-4 text-center">
+                <h2>Top Wines</h2>
+                {% for wine in top_wines %}
+                    <div class="card mb-3" style="width: 20rem; height: 17rem; margin: auto;">
                         <div class="card-body">
                             <h5 class="card-title">{{ wine.get("Name") }}</h5>
-                            <p class="card-text">{{ wine.get("Region") }}, {{  wine.get("Country") }}</p>
-                            <p class="card-text">Year: {{wine.get("Year")}}</p>
+                            <p class="card-text">{{ wine.get("Region") }}, {{ wine.get("Country") }}</p>
+                            <p class="card-text">Year: {{ wine.get("Year") }}</p>
                             <p class="card-text">{{ wine.get("Rating") }} / 5 ({{ wine.get("NumberOfRatings") }})</p>
                             <p class="card-text fw-bold fs-4">{{ wine.get("Price") }} $</p>
                         </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
+            <div class="col-md-4 text-center">
+                <h2>Most Recent Wines</h2>
+                {% for wine in most_recent_wines %}
+                    <div class="card mb-3" style="width: 20rem; height: 17rem; margin: auto;">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ wine.get("Name") }}</h5>
+                            <p class="card-text">{{ wine.get("Region") }}, {{ wine.get("Country") }}</p>
+                            <p class="card-text">Year: {{ wine.get("Year") }}</p>
+                            <p class="card-text">{{ wine.get("Rating") }} / 5 ({{ wine.get("NumberOfRatings") }})</p>
+                            <p class="card-text fw-bold fs-4 ">{{ wine.get("Price") }} $</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="col-md-4 text-center">
+                <h2>Least Recent Wines</h2>
+                {% for wine in least_recent_wines %}
+                    <div class="card mb-3" style="width: 20rem; height: 17  rem; margin: auto;">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ wine.get("Name") }}</h5>
+                            <p class="card-text">{{ wine.get("Region") }}, {{ wine.get("Country") }}</p>
+                            <p class="card-text">Year: {{ wine.get("Year") }}</p>
+                            <p class="card-text">{{ wine.get("Rating") }} / 5 ({{ wine.get("NumberOfRatings") }})</p>
+                            <p class="card-text fw-bold fs-4">{{ wine.get("Price") }} $</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
     </div>
-
 {% endblock %}
-
