--- a/frontend/app/templates/base.html
+++ b/frontend/app/templates/base.html
@@ -27,7 +27,7 @@
                             <a class="nav-link" href="/">Home</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="/internal">Advanced Search</a>
+                            <a class="nav-link" href="/advanced-search">Advanced Search</a>
                         </li>
                 </ul>
             </div>
