--- a/frontend/app/templates/index.html
+++ b/frontend/app/templates/index.html
@@ -12,45 +12,57 @@
         <div class="row" style="margin-top: 24px;">
             <div class="col-md-4 text-center">
                 <h2 class="py-5">Top Wines</h2>
-                {% for wine in top_wines %}
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ wine.get("name") }}</h5>
-                            <p class="card-text">{{ wine.get("region") }}, {{ wine.get("country") }}</p>
-                            <p class="card-text">Year: {{ wine.get("year") }}</p>
-                            <p class="card-text">{{ wine.get("rating") }} / 5 ({{ wine.get("numberofratings") }})</p>
-                            <p class="card-text fw-bold fs-4">{{ wine.get("price") }} $</p>
+                {% if top_wines %}
+                    {% for wine in top_wines %}
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ wine.get("name") }}</h5>
+                                <p class="card-text">{{ wine.get("region") }}, {{ wine.get("country") }}</p>
+                                <p class="card-text">Year: {{ wine.get("year") }}</p>
+                                <p class="card-text">{{ wine.get("rating") }} / 5 ({{ wine.get("numberofratings") }})</p>
+                                <p class="card-text fw-bold fs-4">{{ wine.get("price") }} $</p>
+                            </div>
                         </div>
-                    </div>
-                {% endfor %}
+                    {% endfor %}
+                {% else %}
+                    <p>No wines available.</p>
+                {% endif %}
             </div>
             <div class="col-md-4 text-center">
                 <h2 class="py-5">Most Recent Wines</h2>
-                {% for wine in most_recent_wines %}
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ wine.get("name") }}</h5>
-                            <p class="card-text">{{ wine.get("region") }}, {{ wine.get("country") }}</p>
-                            <p class="card-text">Year: {{ wine.get("year") }}</p>
-                            <p class="card-text">{{ wine.get("rating") }} / 5 ({{ wine.get("numberofratings") }})</p>
-                            <p class="card-text fw-bold fs-4 ">{{ wine.get("price") }} $</p>
+                {% if most_recent_wines %}
+                    {% for wine in most_recent_wines %}
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ wine.get("name") }}</h5>
+                                <p class="card-text">{{ wine.get("region") }}, {{ wine.get("country") }}</p>
+                                <p class="card-text">Year: {{ wine.get("year") }}</p>
+                                <p class="card-text">{{ wine.get("rating") }} / 5 ({{ wine.get("numberofratings") }})</p>
+                                <p class="card-text fw-bold fs-4 ">{{ wine.get("price") }} $</p>
+                            </div>
                         </div>
-                    </div>
-                {% endfor %}
+                    {% endfor %}
+                {% else %}
+                    <p>Not wines available.</p>
+                {% endif %}
             </div>
             <div class="col-md-4 text-center">
                 <h2 class="py-5">Least Recent Wines</h2>
-                {% for wine in least_recent_wines %}
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ wine.get("name") }}</h5>
-                            <p class="card-text">{{ wine.get("region") }}, {{ wine.get("country") }}</p>
-                            <p class="card-text">Year: {{ wine.get("year") }}</p>
-                            <p class="card-text">{{ wine.get("rating") }} / 5 ({{ wine.get("numberofratings") }})</p>
-                            <p class="card-text fw-bold fs-4">{{ wine.get("price") }} $</p>
+                {% if least_recent_wines %}
+                    {% for wine in least_recent_wines %}
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ wine.get("name") }}</h5>
+                                <p class="card-text">{{ wine.get("region") }}, {{ wine.get("country") }}</p>
+                                <p class="card-text">Year: {{ wine.get("year") }}</p>
+                                <p class="card-text">{{ wine.get("rating") }} / 5 ({{ wine.get("numberofratings") }})</p>
+                                <p class="card-text fw-bold fs-4">{{ wine.get("price") }} $</p>
+                            </div>
                         </div>
-                    </div>
-                {% endfor %}
+                    {% endfor %}
+                {% else %}
+                    <p>Not wines available.</p>
+                {% endif %}
             </div>
         </div>
     </div>
